force-app/main/default/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Misc_Output_Types__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>Select all the additional document(s) you want prepared.</inlineHelpText>
        <label>Misc. Output Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Away from Home Care Flyer</fullName>
                </value>
                <value>
                    <fullName>Cancer Screening Rack Card - Men</fullName>
                </value>
                <value>
                    <fullName>Cancer Screening Rack Card -Women</fullName>
                </value>
                <value>
                    <fullName>CAAP Brochure</fullName>
                </value>
                <value>
                    <fullName>COB Form</fullName>
                </value>
                <value>
                    <fullName>CVS Drug Benefit Flyer</fullName>
                </value>
                <value>
                    <fullName>Dash Eating Plan Flyer</fullName>
                </value>
                <value>
                    <fullName>Dental Nationwide Access Rack Card</fullName>
                </value>
                <value>
                    <fullName>Find a Doctor Rack Card</fullName>
                </value>
                <value>
                    <fullName>Health Care P&amp;S Brochure</fullName>
                </value>
                <value>
                    <fullName>Health Eductaion Workshop Flyer</fullName>
                </value>
                <value>
                    <fullName>HIPAA</fullName>
                </value>
                <value>
                    <fullName>HMSA365 Rack Card</fullName>
                </value>
                <value>
                    <fullName>Mail Order Form &amp; Envelope</fullName>
                </value>
                <value>
                    <fullName>Make the Best Choice Brochure</fullName>
                </value>
                <value>
                    <fullName>Medication Talk Flyer</fullName>
                </value>
                <value>
                    <fullName>My Account Rack Card</fullName>
                </value>
                <value>
                    <fullName>Online Care Rack Card</fullName>
                </value>
                <value>
                    <fullName>Ornish Lifestyle Medicine Program</fullName>
                </value>
                <value>
                    <fullName>PCP Rack Card</fullName>
                </value>
                <value>
                    <fullName>QuitNet Flyer</fullName>
                </value>
                <value>
                    <fullName>Recipe Cards</fullName>
                </value>
                <value>
                    <fullName>Traveling Abroad Rack Card</fullName>
                </value>
                <value>
                    <fullName>Urgent Care Flyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Hire_Packet_Quantity__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>How many New Hire Packets are needed.</inlineHelpText>
        <label>New Hire Packet Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Hire_Packet_Type__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>Select the Type(s) of coverage that you want the New Hire Packets created for.</inlineHelpText>
        <label>New Hire Packet Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coverage_Code_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used on all the internal case types.</description>
        <inlineHelpText>The Opportunity that this case originated from.</inlineHelpText>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Bill_Inquiries__c</fullName>
        <description>QUEST Claims</description>
        <label>Provider (Bill Inquiries)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Directory__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>Select the kind(s) of directories you need created.</inlineHelpText>
        <label>Provider Directory</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical - PPP / CompMED</fullName>
                </value>
                <value>
                    <fullName>Medical - PPP Hawaii</fullName>
                </value>
                <value>
                    <fullName>Medical - PPP Kauai</fullName>
                </value>
                <value>
                    <fullName>Medical - PPP Maui</fullName>
                </value>
                <value>
                    <fullName>Medical - HMO HPH</fullName>
                </value>
                <value>
                    <fullName>Medical - HMO Hawaii</fullName>
                </value>
                <value>
                    <fullName>Medical - HMO Kauai</fullName>
                </value>
                <value>
                    <fullName>Medical - HMO Maui</fullName>
                </value>
                <value>
                    <fullName>Drug - PPP / HMO</fullName>
                </value>
                <value>
                    <fullName>Vision - Special Vision</fullName>
                </value>
                <value>
                    <fullName>Vision - HMO Appliance</fullName>
                </value>
                <value>
                    <fullName>Dental - Dental Directory</fullName>
                </value>
                <value>
                    <fullName>Dental - Dental Network</fullName>
                </value>
                <value>
                    <fullName>Compcare Provider Listing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Note__c</fullName>
        <description>Used For Travel</description>
        <label>Reason Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Attendant__c</fullName>
        <description>Used For Travel</description>
        <label>Reason for Attendant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Anesthesia/Sedation</fullName>
                </value>
                <value>
                    <fullName>Chemotherapy</fullName>
                </value>
                <value>
                    <fullName>Physically Handicapped</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Seizures/Epilepsy</fullName>
                </value>
                <value>
                    <fullName>Approved by MM</fullName>
                </value>
                <value>
                    <fullName>One Time Exception</fullName>
                </value>
                <value>
                    <fullName>Ground Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>Select the Reason for submitting this request to the SAS team.</inlineHelpText>
        <label>Reason for Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>OE Presentation w/HPA or HMSA Staff</fullName>
                </value>
                <value>
                    <fullName>New Group Sales (with 50+ new subscribers - expected)</fullName>
                </value>
                <value>
                    <fullName>Existing Group offering a new HMSA plan</fullName>
                </value>
                <value>
                    <fullName>Existing Group discontinues offering a competitor plan (HMSA sole carrier)</fullName>
                </value>
                <value>
                    <fullName>Existing Group acquires a new company resulting in new HMSA members</fullName>
                </value>
                <value>
                    <fullName>New Hire packets (based on group turn-over activity)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_Cost__c</fullName>
        <description>Used For Travel</description>
        <label>Revised Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revision_Cancellation_Notes__c</fullName>
        <description>Used for Travel</description>
        <label>Revision/Cancellation Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAS_Fulfillment_Type__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>Select whether the Request is to be created brand new, reprinted or have the existing version retrieved.</inlineHelpText>
        <label>SAS Fulfillment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SAS_Fulfillment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Option__c</fullName>
        <description>Used on the Contract Request</description>
        <inlineHelpText>Select the Signature Option that should be used for this Contract.</inlineHelpText>
        <label>Signature Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Signature (2 lines)</fullName>
                </value>
                <value>
                    <fullName>Add Paybox</fullName>
                </value>
                <value>
                    <fullName>Add Signature (1 line)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_ASR__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>To ASR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_ECM_Requested_for_GTBs__c</fullName>
        <label>To ECM (Requested for GTBs)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_ECM__c</fullName>
        <label>To ECM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Legal__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>To Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Underwriting__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>To Underwriting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Used on the Contract Request.</description>
        <inlineHelpText>The tracking number for hard copies sent out, if applicable.</inlineHelpText>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Reason_Notes__c</fullName>
        <description>Used for Travel, required if Urgent Reason is Other</description>
        <label>Urgent Reason Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgent_Reason__c</fullName>
        <label>Urgent Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Priority</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chemo</fullName>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                </value>
                <value>
                    <fullName>Post Op</fullName>
                </value>
                <value>
                    <fullName>High Risk Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Contract_Creation_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Owner__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Effective_Date__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Contract_Request</value>
        </filters>
        <label>Open Fully Insured Contract Requests</label>
    </listViews>
    <listViews>
        <fullName>HPA_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Queue: HPA Team</label>
        <queue>HPA_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Benefit_Comparison_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Manager_Rush_Approval_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Benefits_Comparison_Request</value>
        </filters>
        <label>Open Benefit Comparison Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Group_Brochure_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Manager_Rush_Approval_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Group_Brochure_Request</value>
        </filters>
        <label>Open Group Brochure Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_HPA_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Manager_Rush_Approval_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Health_Plan_Advisor_Request</value>
        </filters>
        <label>Open HPA Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_SBC_Creation_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SBC_Request</value>
        </filters>
        <label>Open SBC Creation Requests</label>
    </listViews>
    <listViews>
        <fullName>QUEST_Cases1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.QUEST_Benefits,Case.QUEST_Claims,Case.QUEST_DHS_Change_Request,Case.QUEST_Fulfillment,Case.QUEST_General,Case.QUEST_Complaints,Case.QUEST_Interpreter_Request,Case.QUEST_Miscellaneous</value>
        </filters>
        <label>QUEST - All Cases</label>
    </listViews>
    <listViews>
        <fullName>QUEST_Claims_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.QUEST_Claims</value>
        </filters>
        <label>QUEST - Claims Cases</label>
    </listViews>
    <listViews>
        <fullName>QUEST_R_C_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>QUEST R&amp;C</label>
        <queue>QUEST_R_C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SAS_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Queue: SAS Team</label>
        <queue>SAS_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Benefits_Comparison_Request</fullName>
        <active>true</active>
        <businessProcess>AMS Internal</businessProcess>
        <description>To request the SAS team create a Benefits Comparison document.</description>
        <label>Benefits Comparison Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Request</fullName>
        <active>true</active>
        <businessProcess>AMS Internal</businessProcess>
        <description>To request the SAS team create a contract after an Opportunity is Won.</description>
        <label>Fully Insured Contract Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Brochure_Request</fullName>
        <active>true</active>
        <businessProcess>AMS Internal</businessProcess>
        <description>To request Group Brochure preparation from the SAS team.</description>
        <label>Group Brochure Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CareGap</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__CareGap</businessProcess>
        <description>Defines a care gap for an individual</description>
        <label>CareGap</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CarePlan</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Defines a care plan for an individual and their care team</description>
        <label>CarePlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Plan_Advisor_Request</fullName>
        <active>true</active>
        <businessProcess>AMS Internal HPA</businessProcess>
        <description>To request the HPA team to assist with an Opportunity</description>
        <label>Health Plan Advisor Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_Benefits</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used for inquiries regarding a member’s benefits and [enrollment/plan] eligibility.</description>
        <label>QUEST - Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_Claims</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used for inquiries regarding claims.</description>
        <label>QUEST - Claims</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_Complaints</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used for complaints, grievances and appeals.</description>
        <label>QUEST - Complaints</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_DHS_Change_Request</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used to submit requests for demographic changes for QUEST Integration members.</description>
        <label>QUEST - DHS Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_Fulfillment</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used to submit requests for fulfillment staff to send various documents, letters and forms to members and providers.</description>
        <label>QUEST - Fulfillment</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_General</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used for all other inquiries, not categorized by another case type.</description>
        <label>QUEST - General</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_Interpreter_Request</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <description>This case type is used to submit requests for in-person interpreter services.</description>
        <label>QUEST - Interpreter Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>QUEST_Miscellaneous</fullName>
        <active>true</active>
        <businessProcess>Servicing</businessProcess>
        <label>QUEST - Miscellaneous</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBC_Request</fullName>
        <active>true</active>
        <businessProcess>AMS Internal</businessProcess>
        <description>To request the SAS team create a Summary of Benefits and Coverage after an Opportunity is Won.</description>
        <label>SBC Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_Insured_Contract_Request</fullName>
        <active>true</active>
        <businessProcess>AMS Internal</businessProcess>
        <description>For users to manually create a Case for internal tracking purposes.</description>
        <label>Self-Insured Contract Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_CAAP_HMO</fullName>
        <active>true</active>
        <businessProcess>Travel</businessProcess>
        <description>Use to request and book travel for CAPP-HMO.</description>
        <label>Travel - CAAP-HMO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_QUEST</fullName>
        <active>true</active>
        <businessProcess>Travel</businessProcess>
        <description>Use to request and book  travel for QUEST members.</description>
        <label>Travel - QUEST</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SVC_Travel_Case_Status_Closed</fullName>
        <active>true</active>
        <description>If case status is closed it can not be opened</description>
        <errorConditionFormula>AND(
ISCHANGED(Status),ISPICKVAL(PRIORVALUE(Status),&quot;Resolved&quot;),
OR(
RecordType.Name = &quot;QUEST - Benefits&quot;,
RecordType.Name = &quot;QUEST - Claims&quot;,
RecordType.Name = &quot;QUEST - Complaints&quot;,
RecordType.Name = &quot;QUEST - DHS Change Request&quot;,
RecordType.Name = &quot;QUEST - Fulfillment&quot;,
RecordType.Name = &quot;QUEST - General&quot;,
RecordType.Name = &quot;QUEST - Interpreter Request&quot;,
RecordType.Name = &quot;QUEST - Miscellaneous&quot;
))</errorConditionFormula>
        <errorMessage>Can not open a closed case. Please create a new case and associate it to this one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Travel_Urgent_Reason_Notes</fullName>
        <active>true</active>
        <description>If Urgent Reason is Other require user to enter Urgent Reason Notes</description>
        <errorConditionFormula>AND (TEXT(Urgent_Reason__c) = &quot;Other&quot; , ISBLANK( Urgent_Reason_Notes__c ))</errorConditionFormula>
        <errorDisplayField>Urgent_Reason_Notes__c</errorDisplayField>
        <errorMessage>Urgent Reason is Other please enter Urgent Reason Notes.</errorMessage>
    </validationRules>
</CustomObject>