force-app/main/default/objects/Case/validationRules/SVC_Travel_Case_Status_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>SVC_Travel_Case_Status_Closed</fullName>
    <active>true</active>
    <description>If case status is closed it can not be opened</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),ISPICKVAL(PRIORVALUE(Status),&quot;Resolved&quot;),
OR(
RecordType.Name = &quot;QUEST - Benefits&quot;,
RecordType.Name = &quot;QUEST - Claims&quot;,
RecordType.Name = &quot;QUEST - Complaints&quot;,
RecordType.Name = &quot;QUEST - DHS Change Request&quot;,
RecordType.Name = &quot;QUEST - Fulfillment&quot;,
RecordType.Name = &quot;QUEST - General&quot;,
RecordType.Name = &quot;QUEST - Interpreter Request&quot;,
RecordType.Name = &quot;QUEST - Miscellaneous&quot;
))</errorConditionFormula>
    <errorMessage>Can not open a closed case. Please create a new case and associate it to this one.</errorMessage>
</ValidationRule>