force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Cases</label>
</ListView>