force-app/main/default/objects/Case/listViews/HPA_Team_Case.listView-meta.xml
<ListView>
    <fullName>HPA_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Queue: HPA Team</label>
    <queue>HPA_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>